analysis/low-level-api-fir/testData/lazyResolve/errors/danglingAnnotationOnTopLevelFunctionWithParameter.kt
annotation class Ann

@Ann(
fun foo(<caret>x: Int) = 42
